--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@sap/mdk-tools": "^1.3.1",
     "@sap/xsenv": ">=3.3.2 <3.3.3",
     "@sap/xssec": "^4.2.7",
+    "axios": "^1.7.9",
     "express": "^4",
     "fast-xml-parser": "^4.5.0",
     "hdb": "^0.19.10",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "uuid": "^11.0.3",
     "xml2js": "^0.6.2"
@@ -47,10 +49,8 @@
       },
       "destination_test": {
         "kind": "odata",
-          "credentials": {
-            "url": "https://tehsu161.serv.dev.dc.es.telefonica:443/sap/opu/odata/sap/ZPIFA_SRV/",
-            "username": "IA_TEST",
-            "password": "Acceso123+ab"
+        "credentials": {
+          "destination": "destination_test"
         }
       },
       "app-service": {
