--- a/app/test_app.appfilterdestino/ui5.yaml
+++ b/app/test_app.appfilterdestino/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: testapp.appfilter
+  name: testapp.appfilterdestino
 type: application
 server:
   customMiddleware:
